{
  "version": 4,
  "terraform_version": "0.14.0",
  "serial": 20,
  "lineage": "6ad39a6d-ec82-5ff8-dcd9-7494fd114833",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-059df13dd80c58a65",
            "domain": "vpc",
            "id": "eipalloc-016435d0e9810aedb",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0f70de151f8e77861",
            "private_dns": "ip-10-0-0-49.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.49",
            "public_dns": "ec2-15-164-188-28.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.188.28",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:844556818888:internet-gateway/igw-0080dcbb55ea3cde0",
            "id": "igw-0080dcbb55ea3cde0",
            "owner_id": "844556818888",
            "tags": {
              "Name": "terraform-101-igw"
            },
            "vpc_id": "vpc-08d6f343966427ec9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-016435d0e9810aedb",
            "id": "nat-07b9fec7e6519f353",
            "network_interface_id": "eni-0f70de151f8e77861",
            "private_ip": "10.0.0.49",
            "public_ip": "15.164.188.28",
            "subnet_id": "subnet-04d77f4c3b695b2f7",
            "tags": {
              "Name": "terraform-NATGW"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fca6a30efa7d6d041080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07b9fec7e6519f353",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fca6a30efa7d6d04",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fca6a30efa7d6d04",
            "owner_id": "844556818888",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-101-rt-private"
            },
            "vpc_id": "vpc-08d6f343966427ec9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-081c15f6b6d7bfbac",
            "owner_id": "844556818888",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0080dcbb55ea3cde0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-101-rt-public"
            },
            "vpc_id": "vpc-08d6f343966427ec9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c07bdc00d7d433c5",
            "route_table_id": "rtb-0fca6a30efa7d6d04",
            "subnet_id": "subnet-04d82688465247731"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0438644d29bfdd2c1",
            "route_table_id": "rtb-081c15f6b6d7bfbac",
            "subnet_id": "subnet-04d77f4c3b695b2f7"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:844556818888:subnet/subnet-04d82688465247731",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2d",
            "availability_zone_id": "apne2-az4",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-04d82688465247731",
            "map_public_ip_on_launch": false,
            "owner_id": "844556818888",
            "tags": {
              "Name": "terraform-101-private-subnet"
            },
            "vpc_id": "vpc-08d6f343966427ec9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:844556818888:subnet/subnet-04d77f4c3b695b2f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-04d77f4c3b695b2f7",
            "map_public_ip_on_launch": false,
            "owner_id": "844556818888",
            "tags": {
              "Name": "terraform-101-public-subnet"
            },
            "vpc_id": "vpc-08d6f343966427ec9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:844556818888:vpc/vpc-08d6f343966427ec9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0086e3fe6b2495d1e",
            "default_route_table_id": "rtb-082d9a69efdd14801",
            "default_security_group_id": "sg-097f6645bb4fc7ee4",
            "dhcp_options_id": "dopt-98b82bf3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08d6f343966427ec9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-082d9a69efdd14801",
            "owner_id": "844556818888",
            "tags": {
              "Name": "terraform-101"
            }
          }
        }
      ]
    }
  ]
}